GNOME Bugzilla – Bug 664478
Callback for PIN input in wizard may leak memory
Last modified: 2011-11-21 15:51:12 UTC
Created attachment 201821 [details] [review] Call g_free() before overwriting the pointer with return value from g_strdup() Actually it will leak only if patch 201818 from bug 664476 is applied, however other usages of the user_pincode pointer in this code call g_free() just before g_strdup() so it can be done here too.