wizard: fix memleak

Common usage is freeing just before strdup.

https://bugzilla.gnome.org/show_bug.cgi?id=664478